--- a/django/src/todoApp/templates/todoApp/base.html
+++ b/django/src/todoApp/templates/todoApp/base.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="header">
-            <h1><a href="{% url 'todo_list' %}">Todo List</a></h1>
+            <h1 class="app-name"><a href="{% url 'todo_list' %}">Todo List</a></h1>
         </div>
         <div class="container">
             {% block content %}
